slides/k8s/dep.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: slides
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: slides
    spec:
      containers:
      - image: stevemcquaid/k8s-workshop:latest
        imagePullPolicy: Always
        name: slides
        ports:
        - containerPort: 80
