slides/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: slides
spec:
  selector:
    app: slides
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: LoadBalancer
