slides/k8s/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: slides
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: slides
          servicePort: 80
